blocks/cards/cards.css
.cards > ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 24px;
}

.cards > ul > li {
  flex: 0 1 257px;
  border: 1px solid var(--border-color);
  background-color: var(--background-color);
}

.cards .cards-card-body {
  margin: 16px;
}

.cards .cards-card-image {
  line-height: 0;
}

.cards > ul > li img {
  width: 100%;
  aspect-ratio: 4 / 3;
  object-fit: cover;
}

/* Cards Pricing Variant */
.cards.pricing > ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 32px;
}

.cards.pricing > ul > li {
  flex: 0 1 300px;
  border: 1px solid #c1c1c1;
  border-radius: 4px;
  background-color: var(--light-color);
  padding: 32px;
  display: flex;
  flex-direction: column;
  gap: 16px;
  box-shadow: 0 4px 4px 0 rgb(0 0 0 / 25%);
}

.cards.pricing .cards-card-body {
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 12px;
  flex: 1;
}

.cards.pricing .cards-card-body > p:first-child strong {
  font-size: var(--heading-font-size-l);
  font-weight: 400;
  line-height: 1.29;
  color: var(--text-color);
}

.cards.pricing .cards-card-body > p:nth-child(2) {
  font-size: var(--body-font-size-xs);
  line-height: 1.29;
  letter-spacing: 0.16px;
  color: var(--text-color);
  margin: 0;
}

.cards.pricing .cards-card-body > p:nth-child(3) {
  font-size: var(--body-font-size-s);
  line-height: 1.5;
  color: var(--dark-color);
  margin: 0;
}

.cards.pricing .cards-card-body ul {
  list-style: none;
  padding: 0;
  margin: 8px 0;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.cards.pricing .cards-card-body ul li {
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: var(--body-font-size-xs);
  line-height: 1.29;
  letter-spacing: 0.16px;
  color: var(--text-color);
}

.cards.pricing .cards-card-body ul li::before {
  content: '';
  display: inline-flex;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath fill='%230f62fe' d='M8.5 14.5l-4-4 1.41-1.41L8.5 11.67l5.59-5.58L15.5 7.5l-7 7z'/%3E%3C/svg%3E");
  background-size: contain;
  background-repeat: no-repeat;
}

.cards.pricing .cards-card-body .button-container:last-child {
  margin-top: auto;
  padding-top: 12px;
}

.cards.pricing .cards-card-body .button-container a.button:any-link {
  background-color: var(--gray-80);
  width: 100%;
  margin: 8px 0 0;
}

.cards.pricing .cards-card-body .button-container a.button:hover {
  background-color: #4c4c4c;
}

.cards.pricing .cards-card-image {
  display: none;
}

.cards.pricing > ul > li > .cards-card-body:empty {
  display: none;
}

/* Cards Benefits Variant */
.cards.benefits.block > ul {
  display: grid;
  grid-template-columns: 1fr;
  gap: 32px;
}

@media (width >= 900px) {
  .cards.benefits.block > ul {
    grid-template-columns: 1fr 1fr;
  }
}

.cards.benefits.block > ul > li {
  border: none;
  background: none;
  padding: 0;
  box-shadow: none;
}

.cards.benefits.block .cards-card-image {
  display: none;
}

.cards.benefits.block > ul > li > .cards-card-body {
  margin: 0;
}

.cards.benefits.block > ul > li > .cards-card-body:empty {
  display: none;
}

.cards.benefits.block .cards-card-body > p:first-child {
  display: flex;
  align-items: center;
  gap: 8px;
  font-weight: 600;
  font-size: var(--body-font-size-s);
  margin: 0 0 8px;
}

.cards.benefits.block .cards-card-body > p:first-child::before {
  content: '';
  display: inline-flex;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  background-image: url('/icons/check-circle.svg');
  background-size: contain;
  background-repeat: no-repeat;
}

.cards.benefits.block .cards-card-body > p:nth-child(2) {
  font-size: var(--body-font-size-s);
  line-height: 1.5;
  color: var(--dark-color);
  margin: 0;
  padding-left: 28px;
}

.cards.benefits.block .cards-card-body .button-container {
  display: none;
}

